defmt/tests/ui/derive-empty-attr.rs
#[derive(defmt::Format)]
struct S {
    #[defmt()]
    f: bool,
}

fn main() {}
